--- a/search_job.html
+++ b/search_job.html
@@ -354,7 +354,7 @@
     <div class="pagination-wrapper">
         <div class="pagination-flex flex">
             <div class="ml-1">
-                <span class="mx-3">Jobs per page :</span>
+                <span class="mx-3 job-pages">Jobs per page :</span>
                 <select class="block appearance-none " id="grid-state">
                   <option>10</option>
                   <option>Missouri</option>
